--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -24,3 +24,7 @@ body,
 .bg-app {
     background-color: #2a1d38;
 }
+
+.app-navbar.theme-light.sticky-nav .text-light-900.font-light {
+    color: #fff!important;
+}
