--- a/assets/scss/app.scss
+++ b/assets/scss/app.scss
@@ -1,30 +1,40 @@
-@import url('https://fonts.googleapis.com/css2?family=Oswald:wght@200;300;400;500;600;700&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,300;0,400;0,700;1,400&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat+Alternates:ital,wght@0,400;0,500;0,600;0,700;0,800;1,600;1,700;1,800&family=Montserrat:ital,wght@0,100..900;1,100..900&family=Open+Sans:wght@300;400;500;600;700;800&display=swap');
+@font-face {
+  font-family: SvnMerge;
+  src: url('/font/SVN-merge-bold.otf');
+}
 
 body,
 * {
-  font-family: Lato, sans-serif;
+  font-family: Montserrat, serif;
 }
 
-.f-oswald {
-    font-family: Oswald, Arial, Helvetica, sans-serif;
+.f-svn-merge {
+  font-family: 'SvnMerge', Arial, Helvetica, sans-serif;
+  * {
+    font-family: 'SvnMerge', Arial, Helvetica, sans-serif;
+  }
 }
 
 .c-app-cyan {
-    color: #00ffff
+  color: #00ffff;
 }
 .c-app-violet {
-    color: #a4c2f4
+  color: #a4c2f4;
 }
 
 .bg-app-neutral {
-    background: rgba(50,50,50,1);
+  background: rgba(50, 50, 50, 1);
 }
 
 .bg-app {
-    background-color: #2a1d38;
+  background-color: rgb(68, 17, 21);
 }
 
 .app-navbar.theme-light.sticky-nav .text-light-900.font-light {
-    color: #fff!important;
+  color: #fff !important;
+}
+
+.text-primary {
+  color: rgb(198, 27, 61);
 }
